--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,8 +1,15 @@
 .App {
   text-align: center;
+  font-family: 'Ubuntu', sans-serif;
 }
 .Header {
   color: #443e3e;
   text-shadow: 1px 1px 5px #fff;
+}
+
+.ListColumn {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 /* write your parent styles in here for your App.js */
